# EmbedAgent

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.cn.md  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: ci.yml
cmake/: embedagentConfig.cmake.in
cmake/toolchains/: aarch64-linux-gnu.cmake  arm-linux-gnueabihf.cmake
docs/: build.cn.md  build.md  design.cn.md  design.en.md  recommendations.cn.md  recommendations.en.md  usage.cn.md  usage.en.md
examples/chat_agent/: chat_agent.cpp
examples/common/: ea_demo_io.cpp  ea_demo_io.h
examples/offline_queue_demo/: offline_queue_demo.cpp
examples/tool_call_demo/: ea_tool_gpio.cpp  ea_tool_gpio.h  ea_tool_network.cpp  ea_tool_network.h  ea_tool_process.cpp  ea_tool_process.h  ea_tool_sysinfo.cpp  ea_tool_sysinfo.h  ea_tool_thermal.cpp  ea_tool_thermal.h  tool_call_demo.cpp
include/: ea_agent.h  ea_connectivity_monitor.h  ea_env_secret_store.h  ea_file_offline_queue.h  ea_file_secret_store.h  ea_file_storage.h  ea_llm_client.h  ea_memory_offline_queue.h  ea_network_error.h  ea_offline_queue.h  ea_prompt_template.h  ea_queue_coordinator.h  ea_runtime_config.h  ea_secret_obfuscator.h  ea_secret_resolver.h  ea_secret_store.h  ea_session.h  ea_session_codec.h  ea_storage.h  ea_tool_args.h  ea_tool_builder.h  ea_tool_param.h  ea_tool_registry.h  embed_agent.h
src/: ea_agent.cpp  ea_connectivity_monitor.cpp  ea_env_secret_store.cpp  ea_file_offline_queue.cpp  ea_file_secret_store.cpp  ea_file_storage.cpp  ea_llm_client.cpp  ea_memory_offline_queue.cpp  ea_network_error.cpp  ea_offline_queue.cpp  ea_prompt_template.cpp  ea_queue_coordinator.cpp  ea_runtime_config.cpp  ea_secret_obfuscator.cpp  ea_secret_resolver.cpp  ea_session.cpp  ea_session_codec.cpp  ea_tool_args.cpp  ea_tool_param.cpp  ea_tool_registry.cpp
tests/: test_ea_agent_mock.cpp  test_ea_file_storage.cpp  test_ea_llm_url.cpp  test_ea_offline_queue.cpp  test_ea_queue_coordinator.cpp  test_ea_secret_store.cpp  test_ea_session.cpp  test_ea_session_codec.cpp  test_ea_tool_registry.cpp
